--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=proyecto
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+#server.port=9000
+#spring.main.web-application-type=none
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
