--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=proyecto
 
-#spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
@@ -11,6 +11,8 @@ spring.mail.username=rodolfo.garriazo@utec.edu.pe
 spring.mail.password=xltt fhvg ceya aspn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret=myjwtsecret
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
