--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=proyecto
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jackson.time-zone=UTC
 # Configuración de correo
 
 spring.mail.host=smtp.gmail.com
