--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,29 @@
 spring.application.name=proyecto
 
 # Configuración de la base de datos
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 # Configuración de correo
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Configuración de JWT
-jwt.secret=mysecretJWT
+jwt.secret=${JWT_SECRET}
 
 # Configuración de AWS S3
-aws.s3.bucket-name=proyectodbp2
-aws.s3.region=us-east-1
+
+aws.s3.bucket-name=${AWS_S3_BUCKET}
+aws.s3.region=${AWS_REGION}
 aws.access-key-id=${AWS_ACCESS_KEY_ID}
 aws.secret-access-key=${AWS_SECRET_ACCESS_KEY}
-aws.session-token =${AWS_SESSION_TOKEN}
+aws.session-token=${AWS_SESSION_TOKEN}
 
-  # Clave de API para WHEREBY
+# Clave de API para WHEREBY
 WHEREBY_API_KEY=${WHEREBY_API_KEY}
